# android-xdl-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  README.zh-CN.md
example/: Cargo.toml
example/examples/: libc_puts.rs
example/src/: main.rs
xdl/: Cargo.toml  build.rs
xdl-derive/: Cargo.toml
xdl-derive/src/: lib.rs  wrapper.rs
xdl-derive/src/internals/: ast.rs  attr.rs  case.rs  mod.rs
xdl/src/: error.rs  lib.rs  mut_ptr.rs  ptr.rs
xdl/src/raw/: api.rs  library.rs  mod.rs
xdl/src/symbol/: library.rs  mod.rs
xdl/src/wrapper/: container.rs  mod.rs
