[package]
name = "android_xdl"
edition = "2024"
version = "0.0.2"
authors = ["github@suqiernb <suqiernb@qq.com>"]
description = "xDL is an enhanced implementation of the Android DL series functions."
license = "MIT"
repository = "https://github.com/suqiernb/android-xdl-rs"
readme = "../README.md"
keywords = ["android", "bindings", "dlopen", "xdl"]
categories = ["api-bindings", "os::android-apis"]

[package.metadata.docs.rs]
targets = [
    "thumbv7neon-linux-androideabi",
    "arm-linux-androideabi",
    "armv7-linux-androideabi",
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android",
]

[dependencies]
libc = "0.2"
android_xdl_derive = { path = "../xdl-derive", version = "0.0.1", optional = true }

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }

[features]
default = []
wrapper = []
derive = ["wrapper", "dep:android_xdl_derive"]